app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-app
  labels:
    app: hello-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-app
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: hello-app
    spec:
      containers:
      - image: my-user:hello-app:v1
        name: hello-app
        ports:
        - containerPort: 8888
