app/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kmichiko-app
  labels:
    app: kmichiko-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kmichiko-app
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: kmichiko-app
    spec:
      containers:
      - image: hellousermy11/kmichiko-app:v2
        name: kmichiko-app
        ports:
        - containerPort: 8888
