app/service.yml
apiVersion: v1
kind: Service
metadata:
  name: kmichiko-app
  labels:
    app: kmichiko-app
spec:
  ports:
    - protocol: TCP
      name: http
      port: 8888
  selector:
    app: kmichiko-app
  type: ClusterIP
